fix: correct overflow when vertically stacked

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -1,7 +1,7 @@
 html,
 body,
 #__next {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
 }
 
